removed cdi for now as it was causing problems with the full dependency jar